--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,22 +1,21 @@
 server {
     listen 80;
     index index.php index.html;
-    server_name localhost;
+    error_log  /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
     root /var/www/public;
 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
-
     location ~ \.php$ {
-        fastcgi_pass service_order:9000;
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass bwamicro_service_order:9000;
         fastcgi_index index.php;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        fastcgi_param DOCUMENT_ROOT $realpath_root;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
-
-    location ~ /\.ht {
-        deny all;
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+        gzip_static on;
     }
 }
